<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchMovie">

    <EditText
        android:id="@+id/movieSearchBox"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:background="@drawable/input_box"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/search"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02"
        tools:ignore="SpeakableTextPresentCheck"
        android:autofillHints=""
        android:inputType="text" />

    <Button
        android:id="@+id/movieSearchBtn"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/retrieve_movie"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieSearchBox"
        app:layout_constraintVertical_bias="0.01" />

    <Button
        android:id="@+id/movieSaveBtn"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/save_movie_to_database"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.835"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieSearchBox"
        app:layout_constraintVertical_bias="0.01" />

    <ScrollView
        android:id="@+id/movieScrollView"
        android:layout_width="325dp"
        android:layout_height="325dp"
        android:background="@drawable/table_layout"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieSearchBtn"
        app:layout_constraintVertical_bias="0.282">

        <TextView
            android:id="@+id/movieResultsBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/the_results_will_appear_here"
            android:padding="10dp"
            android:text=""
            android:textColor="@color/black"
            android:textColorHint="#757575"
            android:textSize="15sp" />

    </ScrollView>

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/Copyright"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieScrollView"
        app:layout_constraintVertical_bias="0.676" />

</androidx.constraintlayout.widget.ConstraintLayout>